--- a/api-project/index.html
+++ b/api-project/index.html
@@ -14,6 +14,7 @@
    <label>ENTER YOUR NAME</label><br>
    <input type="text" name="" id="nameid">
   </div>
+  <!-- this is a project -->
 
   <div class="imgdiv">
    <img src="img.svg" width="200" height="200" class="imgchange">
